# linked-data-schema

./: Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  linked_data_schema_field_visitor.rs
src/linked_data_schema_field_visitor/: uuid.rs
tests/: Cargo.toml
tests/src/: basic_tests.rs  lib.rs  link_to_other_struct.rs
