[package]
name = "linked-data-schema-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
linked-data-core = "0.1"
proc-macro-error = "1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
uuid = { version = "1.17.0", features = ["v4"] }
